force-app/main/default/objects/Contact/fields/MK_Customer_Fit__c.field-meta.xml
<CustomField>
    <fullName>MK_Customer_Fit__c</fullName>
    <formula>CASE(MK_Customer_Fit_Segment__c,
&apos;very good&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20),
&apos;good&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20),
&apos;medium&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20),
IMAGE(&quot;https://cdn.madkudu.com/images/cross.png&quot;, &quot;Star&quot;, 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MK Customer Fit</label>
    <type>Text</type>
</CustomField>