force-app/main/default/objects/Contact/fields/MK_Lead_Grade__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Grade__c</fullName>
    <formula>CASE(MK_Lead_Grade_Segment__c, 
&apos;A&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/lead_grades/grade_a_s.png&quot;, &quot;A&quot;, 20, 20), 
&apos;B&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/lead_grades/grade_b_s.png&quot;, &quot;B&quot;, 20, 20), 
&apos;C&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/lead_grades/grade_c_s.png&quot;, &quot;C&quot;, 20, 20), 
&apos;D&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/lead_grades/grade_d_s.png&quot;, &quot;D&quot;, 20, 20), 
IMAGE(&quot;https://cdn.madkudu.com/images/lead_grades/grade_e_s.png&quot;, &quot;E&quot;, 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MK Lead Grade</label>
    <type>Text</type>
</CustomField>