force-app/main/default/objects/Contact/fields/MK_Lead_Grade_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Grade_Segment__c</fullName>
    <description>Madkudu Lead Grade segment (A, B, C, D or E)</description>
    <label>MK Lead Grade Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>