force-app/main/default/objects/Contact/fields/MK_Likelihood_to_Buy_Score__c.field-meta.xml
<CustomField>
    <fullName>MK_Likelihood_to_Buy_Score__c</fullName>
    <description>Madkudu likelihood to buy score (between 0 and 100)</description>
    <label>MK Likelihood to Buy Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>