force-app/main/default/objects/Contact/fields/MK_MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MK_MQL_Date__c</fullName>
    <label>MK MQL Date</label>
    <type>Date</type>
</CustomField>