force-app/main/default/objects/Contact/fields/most_recent_due_date__c.field-meta.xml
<CustomField>
    <fullName>most_recent_due_date__c</fullName>
    <label>most recent due date</label>
    <type>Date</type>
</CustomField>