force-app/main/default/objects/Contact/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <description>for lifecycle funnel</description>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>