force-app/main/default/objects/Contact/fields/NeverBounce_Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>NeverBounce_Validation_Result__c</fullName>
    <description>Set via integration with Neverbounce in hubSpot. One time job run on backlog in March 2024, on creation verification for records created after.</description>
    <label>NeverBounce Validation Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>