force-app/main/default/objects/Contact/fields/No_Show_CP__c.field-meta.xml
<CustomField>
    <fullName>No_Show_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prospect didn&apos;t show up from a Chili Piper booked meeting</description>
    <label>No Show</label>
    <type>Checkbox</type>
</CustomField>