force-app/main/default/objects/Contact/fields/Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Date__c</fullName>
    <description>for lifecycle funnel</description>
    <label>Opportunity Date</label>
    <type>Date</type>
</CustomField>