force-app/main/default/objects/Contact/fields/Original_Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Created_Date__c</fullName>
    <label>Original Lead Created Date</label>
    <type>DateTime</type>
</CustomField>