force-app/main/default/objects/Contact/fields/Outside_of_HQ_Country__c.field-meta.xml
<CustomField>
    <fullName>Outside_of_HQ_Country__c</fullName>
    <formula>NOT(
    AND(
        ISBLANK(MailingCountry),
        Account.BillingCountry = MailingCountry
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outside of HQ Country</label>
    <type>Checkbox</type>
</CustomField>