force-app/main/default/objects/Contact/fields/OysterHR_Platform_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>OysterHR_Platform_Account_Name__c</fullName>
    <description>Company name of the OsyerHR Platform user. Updated manually.</description>
    <label>OysterHR Platform Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>