force-app/main/default/objects/Contact/fields/OysterHR_Platform_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>OysterHR_Platform_Org_ID__c</fullName>
    <description>Org ID of the org the user is associated with. Updated manually via import.</description>
    <label>OysterHR Platform Org ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>