force-app/main/default/objects/Contact/fields/OysterHR_Platform_User_Role__c.field-meta.xml
<CustomField>
    <fullName>OysterHR_Platform_User_Role__c</fullName>
    <description>List of user roles the user has in the Oyster Platform. Updated manually via import.</description>
    <label>OysterHR Platform User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>