force-app/main/default/objects/Contact/fields/page_source__c.field-meta.xml
<CustomField>
    <fullName>page_source__c</fullName>
    <description>Filled in by a flow using the Sign Up URL</description>
    <label>page_source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>