force-app/main/default/objects/Contact/fields/Partner_Integration_Request__c.field-meta.xml
<CustomField>
    <fullName>Partner_Integration_Request__c</fullName>
    <description>Name of the company that a visitor or customer is requesting an integration from the webform</description>
    <label>Partner Integration Request</label>
    <type>TextArea</type>
</CustomField>