force-app/main/default/objects/Contact/fields/Partner_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Date__c</fullName>
    <description>Date when the lead was referred by the Partner.
Example use case - date stamp from form submits from Bamboo Marketplace.</description>
    <label>Partner Referral Date</label>
    <type>Date</type>
</CustomField>