force-app/main/default/objects/Contact/fields/Partner_Referral_Message__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Message__c</fullName>
    <label>Partner Referral Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>