force-app/main/default/objects/Contact/fields/Partner_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Source__c</fullName>
    <description>Source of the partner referral, used for automated referrals from partner marketplaces. Most recent value. Can be overwritten.</description>
    <label>Partner Referral Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>