force-app/main/default/objects/Contact/fields/PartnerStack_ID_Key__c.field-meta.xml
<CustomField>
    <fullName>PartnerStack_ID_Key__c</fullName>
    <description>For PartnerStack</description>
    <label>Partner Stack ID Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>