force-app/main/default/objects/Contact/fields/PartnerStack_Lead_Key__c.field-meta.xml
<CustomField>
    <fullName>PartnerStack_Lead_Key__c</fullName>
    <label>PartnerStack Lead Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>