force-app/main/default/objects/Contact/fields/Platform_Account_Admin_Status__c.field-meta.xml
<CustomField>
    <fullName>Platform_Account_Admin_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platform Account Admin Status</label>
    <type>Checkbox</type>
</CustomField>