force-app/main/default/objects/Contact/fields/Platform_Admin_For_Companies_IDs__c.field-meta.xml
<CustomField>
    <fullName>Platform_Admin_For_Companies_IDs__c</fullName>
    <label>Platform Admin For Companies IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>