force-app/main/default/objects/Contact/fields/Prospect_Date__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Date__c</fullName>
    <description>for lifecycle funnel</description>
    <label>Prospect Date</label>
    <type>Date</type>
</CustomField>