force-app/main/default/objects/Contact/fields/Referrer_URL__c.field-meta.xml
<CustomField>
    <fullName>Referrer_URL__c</fullName>
    <label>Referrer URL</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>