force-app/main/default/objects/Contact/fields/Referring_Customer_Partner_ID_Key__c.field-meta.xml
<CustomField>
    <fullName>Referring_Customer_Partner_ID_Key__c</fullName>
    <label>Referring Customer Partner ID Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>