force-app/main/default/objects/Contact/fields/Resubscribed__c.field-meta.xml
<CustomField>
    <fullName>Resubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set in HubSpot, when a person changes their subscription preferences and subscribes again via form submission or other link. Used in Salesloft to align communication preferences.</description>
    <label>Resubscribed</label>
    <type>Checkbox</type>
</CustomField>