force-app/main/default/objects/Contact/fields/revealapps__Account_revenue_multiplier__c.field-meta.xml
<CustomField>
    <fullName>revealapps__Account_revenue_multiplier__c</fullName>
    <formula>Account.revealapps__Revenue_multiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account revenue multiplier</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>