force-app/main/default/objects/Contact/fields/revealapps__Is_Deal_Influencer_at__c.field-meta.xml
<CustomField>
    <fullName>revealapps__Is_Deal_Influencer_at__c</fullName>
    <label>(Reveal) Is a deal influencer at</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>