force-app/main/default/objects/Contact/fields/revealapps__Is_Deal_Influencer_at_count__c.field-meta.xml
<CustomField>
    <fullName>revealapps__Is_Deal_Influencer_at_count__c</fullName>
    <label>(Reveal) Is a deal influencer at (count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>