force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Person&apos;s standardized role, based on title (ex: sales, marketing, etc.) enriched from Clearbit</description>
    <inlineHelpText>Person&apos;s standardized role, enriched from Clearbit</inlineHelpText>
    <label>Role</label>
    <type>TextArea</type>
</CustomField>