force-app/main/default/objects/Contact/fields/Routing_Status__c.field-meta.xml
<CustomField>
    <fullName>Routing_Status__c</fullName>
    <description>Mapped from lead on conversion to preserve the LeanData status (what action LeanData performed on the lead in the lead router)</description>
    <label>LeanData Routing Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>