force-app/main/default/objects/Contact/fields/SCL_Date__c.field-meta.xml
<CustomField>
    <fullName>SCL_Date__c</fullName>
    <description>for lifecycle funnel</description>
    <label>SCL Date</label>
    <type>Date</type>
</CustomField>