force-app/main/default/objects/Contact/fields/Secondary_email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_email__c</fullName>
    <label>Secondary email</label>
    <type>Email</type>
</CustomField>