force-app/main/default/objects/Contact/fields/Seniority_for_rollup__c.field-meta.xml
<CustomField>
    <fullName>Seniority_for_rollup__c</fullName>
    <description>Rolled up into &quot;Contact Seniority&quot; field on the account.</description>
    <formula>CASE(Seniority__c,
&quot;Director&quot;,&quot;Director+&quot;,
&quot;director&quot;,&quot;Director+&quot;,
&quot;Entry-Level&quot;,&quot;Entry-level&quot;,
&quot;Executive&quot;,&quot;Director+&quot;,
&quot;executive&quot;,&quot;Director+&quot;,
&quot;Executive-Level&quot;,&quot;Director+&quot;,
&quot;Experienced Staff&quot;,&quot;Mid-level&quot;,
&quot;Global Head of Talent Acquisition&quot;,&quot;Director+&quot;,
&quot;Head of Engineering&quot;,&quot;Director+&quot;,
&quot;Manager&quot;,&quot;Mid-level&quot;,
&quot;manager&quot;,&quot;Mid-level&quot;,
&quot;Middle-Management&quot;,&quot;Mid-level&quot;,
&quot;Other&quot;,&quot;Entry-level&quot;,
&quot;Senior Leadership&quot;,&quot;Mid-level&quot;,
&quot;Team-lead&quot;,&quot;Mid-level&quot;,
&quot;Top-Tier Leadership&quot;,&quot;Director+&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seniority (for rollup)</label>
    <type>Text</type>
</CustomField>