force-app/main/default/objects/Contact/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bad Data</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Bad Fit - Contact</fullName>
            </value>
            <value>
                <fullName>Bad Fit - Account</fullName>
            </value>
            <value>
                <fullName>Bad Fit - Out of Business Scope</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>&lt;5 Contractor Hire</fullName>
            </value>
            <value>
                <fullName>Job Seeker</fullName>
            </value>
            <value>
                <fullName>Seeking platform support</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Current Customer</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Seeking a partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>