force-app/main/default/objects/Contact/fields/Tech_Category__c.field-meta.xml
<CustomField>
    <fullName>Tech_Category__c</fullName>
    <description>Enriched from Clearbit</description>
    <label>Tech Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>account_based_marketing</fullName>
            </value>
            <value>
                <fullName>accounting_and_finance</fullName>
            </value>
            <value>
                <fullName>advertising</fullName>
            </value>
            <value>
                <fullName>analytics</fullName>
            </value>
            <value>
                <fullName>applicant_tracking_system</fullName>
            </value>
            <value>
                <fullName>authentication_services</fullName>
            </value>
            <value>
                <fullName>bookings_reservations</fullName>
            </value>
            <value>
                <fullName>business_management</fullName>
            </value>
            <value>
                <fullName>cloud_computing_services</fullName>
            </value>
            <value>
                <fullName>content_management_system</fullName>
            </value>
            <value>
                <fullName>conversion_optimization</fullName>
            </value>
            <value>
                <fullName>crm</fullName>
            </value>
            <value>
                <fullName>customer_data_platform</fullName>
            </value>
            <value>
                <fullName>customer_support</fullName>
            </value>
            <value>
                <fullName>data_enrichment_services</fullName>
            </value>
            <value>
                <fullName>data_management</fullName>
            </value>
            <value>
                <fullName>data_processing</fullName>
            </value>
            <value>
                <fullName>data_visualization</fullName>
            </value>
            <value>
                <fullName>database</fullName>
            </value>
            <value>
                <fullName>dns</fullName>
            </value>
            <value>
                <fullName>ecommerce</fullName>
            </value>
            <value>
                <fullName>email_delivery_service</fullName>
            </value>
            <value>
                <fullName>email_hosting_service</fullName>
            </value>
            <value>
                <fullName>form_builder</fullName>
            </value>
            <value>
                <fullName>geolocation</fullName>
            </value>
            <value>
                <fullName>human_capital_management</fullName>
            </value>
            <value>
                <fullName>image_video_services</fullName>
            </value>
            <value>
                <fullName>live_chat</fullName>
            </value>
            <value>
                <fullName>marketing_automation</fullName>
            </value>
            <value>
                <fullName>monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>