force-app/main/default/objects/Contact/fields/Tech_Tags__c.field-meta.xml
<CustomField>
    <fullName>Tech_Tags__c</fullName>
    <label>Tech Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sixsense</fullName>
            </value>
            <value>
                <fullName>demandbase</fullName>
            </value>
            <value>
                <fullName>engagio</fullName>
            </value>
            <value>
                <fullName>jabmo</fullName>
            </value>
            <value>
                <fullName>madison_logic</fullName>
            </value>
            <value>
                <fullName>terminus</fullName>
            </value>
            <value>
                <fullName>triblio</fullName>
            </value>
            <value>
                <fullName>factset</fullName>
            </value>
            <value>
                <fullName>flexera_software</fullName>
            </value>
            <value>
                <fullName>oracle_cash_and_treasury_management</fullName>
            </value>
            <value>
                <fullName>paychex</fullName>
            </value>
            <value>
                <fullName>quickbooks</fullName>
            </value>
            <value>
                <fullName>sage_50cloud</fullName>
            </value>
            <value>
                <fullName>sage_intacct</fullName>
            </value>
            <value>
                <fullName>sap_concur</fullName>
            </value>
            <value>
                <fullName>sap_sales_order_management</fullName>
            </value>
            <value>
                <fullName>thomson_reuters_eikon</fullName>
            </value>
            <value>
                <fullName>acquisio</fullName>
            </value>
            <value>
                <fullName>adform_advertiser</fullName>
            </value>
            <value>
                <fullName>admeld</fullName>
            </value>
            <value>
                <fullName>adroll</fullName>
            </value>
            <value>
                <fullName>adscale</fullName>
            </value>
            <value>
                <fullName>amazon_associates</fullName>
            </value>
            <value>
                <fullName>app_nexus</fullName>
            </value>
            <value>
                <fullName>appnexus</fullName>
            </value>
            <value>
                <fullName>bing_ads</fullName>
            </value>
            <value>
                <fullName>bing_advertiser</fullName>
            </value>
            <value>
                <fullName>c3_metrics</fullName>
            </value>
            <value>
                <fullName>cj_affiliate</fullName>
            </value>
            <value>
                <fullName>criteo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>