force-app/main/default/objects/Contact/fields/To_Follow_CS_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>To_Follow_CS_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by Opportunity - Create Handover flow</description>
    <label>To Follow CS Onboarding</label>
    <type>Checkbox</type>
</CustomField>