force-app/main/default/objects/Contact/fields/Updated_by_Iceberg_Import__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_Iceberg_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this was updated from April 2021 Import by Iceberg</description>
    <inlineHelpText>Checked if this was updated from April 2021 Import by Iceberg</inlineHelpText>
    <label>Updated by Iceberg Import</label>
    <type>Checkbox</type>
</CustomField>