force-app/main/default/objects/Contact/fields/Use_Case_2__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_2__c</fullName>
    <description>Submitted by the prospect.</description>
    <label>Use Case [Global]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Use_case</valueSetName>
    </valueSet>
</CustomField>