force-app/main/default/objects/Contact/fields/Use_Case_v2__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_v2__c</fullName>
    <description>Submitted by prospect via web form. Switched to multi-picklist in Q4 2024</description>
    <label>Use Case [Multi]</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Use_case</valueSetName>
    </valueSet>
</CustomField>