force-app/main/default/objects/Contact/fields/Variable__c.field-meta.xml
<CustomField>
    <fullName>Variable__c</fullName>
    <description>Stamp indicating the type of test the prospect is going through.</description>
    <label>Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>