force-app/main/default/objects/Contact/fields/X1_1_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>X1_1_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Maps between Hubspot and Salesloft to update if a contact has unsubscribed from 1:1 communications</description>
    <label>1:1 Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>