force-app/main/default/objects/Contact/fields/X1st_meeting_booked_with__c.field-meta.xml
<CustomField>
    <fullName>X1st_meeting_booked_with__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st meeting booked with</label>
    <type>Checkbox</type>
</CustomField>