force-app/main/default/objects/Contact/validationRules/leadsourceNotEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>leadsourceNotEditable</fullName>
    <active>true</active>
    <description>only system admins can update the lead status once it&apos;s been created</description>
    <errorConditionFormula>NOT(ISNEW()) 
&amp;&amp; ISCHANGED(LeadSource) 
&amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Only System Administrators can update Lead Status after the value has been set.</errorMessage>
</ValidationRule>