force-app/main/default/objects/Contact/validationRules/Require_Lead_Source_on_Contact_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Lead_Source_on_Contact_Create</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL(LeadSource,&quot;&quot;) &amp;&amp; Lead_Source_Detail__c &lt;&gt; &quot;Cognism&quot;&amp;&amp; Lead_Source_Detail__c &lt;&gt; &quot;Zoominfo&quot;</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Please choose a Lead Source.</errorMessage>
</ValidationRule>