force-app/main/default/objects/Contact/listViews/Caleb_Newbys_Contact_view.listView-meta.xml
<ListView>
    <fullName>Caleb_Newbys_Contact_view</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>MK_Customer_Fit__c</columns>
    <columns>MK_Customer_Fit_Score__c</columns>
    <columns>MK_Customer_Fit_Segment__c</columns>
    <columns>MK_Lead_Grade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>cnewb</value>
    </filters>
    <label>Caleb Newbys Contact view</label>
</ListView>